hphp/hack/test/typecheck/references/binding_superglobals.php
<?hh // partial

function f(): void {
  $x = null;
  $_GET = &$x;
}
